--- a/portfolio-landing/src/css/common.css
+++ b/portfolio-landing/src/css/common.css
@@ -1,17 +1,22 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import "../css/_fonts.css";
 @import "../css/_reset.css";
 /* @import "../css/_ui.css"; */
 
 body {
   font-family: "Montserrat", sans-serif;
+  /* @apply bg-cyan-400; */
 }
 .wrapper {
   overflow: hidden;
   min-height: 100%;
 }
-.container {
+/* .container {
   max-width: 1280px;
   padding: 0px 85px;
-  /* padding-inline: 15px; */
+  padding-inline: 15px;
   margin: 0 auto;
-}
+} */
