--- a/portfolio-landing/src/component/menu/Menu.css
+++ b/portfolio-landing/src/component/menu/Menu.css
@@ -1,7 +1,7 @@
 .container {
-    max-width: 1180px;
+    max-width: 1365px;
+    padding: 0px 5.3125rem;
     margin: 0px auto;
-    padding: 0px 10px;
 }
 .header {
     position: fixed;
@@ -9,6 +9,7 @@
     top: 0;
     left: 0;
     z-index: 100;
+    border-bottom: 1px solid #E5E7EB;
 }
 
 .header:before{
@@ -18,7 +19,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #435745;
+    background-color: #ffffff;
     z-index: 3;
 }
 
@@ -26,12 +27,12 @@
     position: relative;
     display: flex;
     justify-content: space-between;
-    height: 80px;
+    height: 4rem;
     align-items: center;
 }
 .header__logo {
-    flex: 0 0 60px;
-    border-radius: 50%;
+    flex: 0 0 2.0625rem;
+    /* border-radius: 50%; */
     overflow: hidden;
     background-color: #fff;
     position: relative;
@@ -57,26 +58,27 @@
 
 .header__list li{
     list-style: none;
-    margin-left: 20px;
+    margin-left: 1.25rem;
 }
 .header__link {
-    color: rgb(255, 255, 255);
-    text-transform: uppercase;
-    font-size: 18px;
+    color: #696969;
+    font-size: 1rem;
+    line-height: 1.5rem;
     text-decoration: none;
+    font-weight: 600;
 }
 
 /* все что меньше 767 будет бургером */
 
-@media(max-width:767px){
+@media(max-width:793px){
     body.lock{
         overflow: hidden;
     }
     .header__body {
-        height: 50px;
+        height: 3.125rem;
     }
     .header__logo{
-        flex: 0 0 40px;
+        flex: 0 0 2.5rem;
     }
     .header__burger{
         display: block;
@@ -88,20 +90,20 @@
     }
     .header__burger span{
         position: absolute;
-        background-color: #fff;
+        background-color: #000000;
         left: 0;
         width: 100%;
-        height: 2px;
+        height: 3px;
         top: 9px;
         transition: all 0.3s ease 0s;
     }
     .header__burger::before,
     .header__burger::after{
         content: "";
-        background-color: #fff;
+        background-color: #000000;
         position: absolute;
         width: 100%;
-        height: 2px;
+        height: 3px;
         left: 0;
         transition: all 0.3s ease 0s;
     }
@@ -133,8 +135,11 @@
         height: 100%;
         overflow: auto;
         transition: all 0.3s ease 0s;
-        background-color: #e0a74c;
-        padding: 70px 10px 20px 10px;
+        background-color: #a09f9d;
+        padding: 120px 10px 50px 10px;
+        /* margin: 0 auto; */
+        text-align: center;
+
     }
 
     .header__menu.active{
@@ -152,21 +157,3 @@
     }
 }
 
-
-.content {
-    padding: 100px 0px 0px 0px;
-}
-.content__text {
-    font-size: 16px;
-    line-height: 25px;
-}
-
-.content__text p{
-    margin: 0px 0px 20px 0px;
-}
-
-@media(max-width:767px){
-    .content {
-        padding: 70px 0px 0px 0px;
-    }
-}
