--- a/portfolio-landing/src/css/common.css
+++ b/portfolio-landing/src/css/common.css
@@ -8,15 +8,8 @@
 
 body {
   font-family: "Montserrat", sans-serif;
-  /* @apply bg-cyan-400; */
 }
 .wrapper {
-  overflow: hidden;
-  min-height: 100%;
+  @apply overflow-hidden min-h-full;
 }
-/* .container {
-  max-width: 1280px;
-  padding: 0px 85px;
-  padding-inline: 15px;
-  margin: 0 auto;
-} */
+
