--- a/portfolio-landing/src/component/button/Button.css
+++ b/portfolio-landing/src/component/button/Button.css
@@ -5,7 +5,7 @@
     background: #7e3af2;
     border: none;
     outline: none;
-    border-radius: 50px;
+    border-radius: 50px; 
     overflow: hidden;
     font-size: 16px;
     font-weight: 600;
@@ -13,7 +13,15 @@
     cursor: pointer;
     padding: 13px 25px 13px 25px;
   }
-  
+
+.btn-tg:hover{
+  background: #6C2BD9;
+}
+.btn-tg:active{
+  border: 3px solid #CABFFD;
+}
+
+
   .btn-text,
   .btn-icon {
     display: inline-flex;
@@ -31,3 +39,16 @@
     stroke: #7e3af2;
   }
   
+  .btn-tg:disabled{
+    background: #E5E7EB;
+    cursor: not-allowed;
+    /* color: #696969; */
+  }
+  .btn-tg:disabled .btn-text{
+    color: #696969;
+  }
+  .btn-tg:disabled .btn-icon svg path{
+    fill: #696969;
+    stroke: #E5E7EB;
+  }
+    
