--- a/portfolio-landing/src/component/menu/Menu.css
+++ b/portfolio-landing/src/component/menu/Menu.css
@@ -1,8 +1,4 @@
-.container {
-    max-width: 1365px;
-    padding: 0px 5.3125rem;
-    margin: 0px auto;
-}
+
 .header {
     position: fixed;
     width: 100%;
@@ -135,9 +131,8 @@
         height: 100%;
         overflow: auto;
         transition: all 0.3s ease 0s;
-        background-color: #a09f9d;
+        background-color: #f0eaea;
         padding: 120px 10px 50px 10px;
-        /* margin: 0 auto; */
         text-align: center;
 
     }
@@ -153,7 +148,7 @@
         margin: 0px 0px 20px 0px;
     }
     .header__link{
-        font-size: 24px;
+        font-size: 30px;
     }
 }
 
