--- a/portfolio-landing/src/component/home/Home.css
+++ b/portfolio-landing/src/component/home/Home.css
@@ -7,16 +7,16 @@
   overflow: hidden;
   margin-top: 5rem;
 }
-
-@media (min-width: 793px){
+@media (min-width: 793px) {
   .section {
-    display:flex;
+    display: flex;
   }
 }
 .section__content {
   flex: 0 0 100%;
   /* display: flex; */
 }
+
 .section__container {
   max-width: 1365px;
   padding: 0px 5.3125rem;
@@ -25,27 +25,40 @@
   display: flex;
   align-items: center;
 }
+
 .section__body {
-  padding: 162px 0px 0px 0px;
+  /* padding: 162px 0px 0px 0px; */
 }
-@media (min-width: 793px){
+@media (min-width: 793px) {
   .section__body {
     width: 50%;
     padding: 50px 30px 50px 0px;
   }
+  .about__body {
+    padding: 0px 200px 0px 0px;
+  }
+  .about__container {
+    padding: 0px 0px;
+  }
 }
+
 .section__title {
   font-weight: 700;
   font-size: 60px;
   line-height: 90px;
+}
+
+h3{
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
 }
 .section__description {
   font-size: 20px;
   line-height: 30px;
   color: #696969;
 }
-
-.section__text{
+.section__text {
   position: relative;
   font-size: 20px;
   line-height: 30px;
@@ -53,12 +66,15 @@
   margin-top: 5.75rem;
   margin-bottom: 3.75rem;
 }
-.section__text::before{
+.section__text p strong {
+  color: black;
+}
+.section__text::before {
   content: "";
   position: absolute;
   width: 25px;
   height: 3px;
-  background-color: #7E3AF2;
+  background-color: #7e3af2;
   display: inline-block;
   margin: -24px 0px 0px 0px;
 }
@@ -66,16 +82,34 @@
 .section__image {
   max-width: 100%;
 }
-
-
-@media (min-width: 793px){
+@media (min-width: 793px) {
   .section__image {
     flex: 0 0 50%;
     transform: translate(-100%, 0px);
     padding: 0px 0px 44% 0px;
     position: relative;
   }
-  .section__image img{
+  .round {
+    flex: 0 0 50%;
+    transform: translate(0px, 0px);
+    padding: 0px 0px 20% 0px;
+    position: relative;
+  }
+  
+/* .round{
+  display: inline-block;
+  border-radius: 100%;
+  overflow: hidden;
+  width: 364px;
+  height: 364px;
+}
+.round img{
+  width:100%;
+  height:100%;
+  object-fit: cover;
+  background-color: #696969;
+} */
+  .section__image img {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -83,43 +117,67 @@
     left: 0;
   }
 }
-.about__header{
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 48px;
-}
-.about{
 
+/* --------------- */
+.section__interests{
+  display: flex;
+  margin-top: 44px;
 }
-.about__container{
-display: flex;
-gap: 158px;
-}
-.about__content::before{
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 3px;
-  background-color: #7E3AF2;
-  display: inline-block;
-  margin: -24px 0px 0px 0px;
-}
-.about__images{
-flex: 0 1 50%;
 
+.circle{
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  border: 2px solid #7E3AF2;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  justify-content: center;
+  -ms-align-items: center;
+  align-items: center;
+  margin-right: 16px;
 }
-.about__images img{
-  max-width: 100%;
+
+
+.circle svg path {
+  fill: #7e3af2;
+  stroke: #7e3af2;
 }
-.about__content{
-  flex: 0 1 50%;
-  align-self: center;
-}
-.about__content p{
+
+.section__about__title{
+  font-weight: 600;
   font-size: 20px;
   line-height: 30px;
-  color: #696969;
 }
-.about__content p strong{
-  color: black;
+
+.section__about__text{
+  color: #27272A;
 }
+
+.section__education{
+  display: inline-block;
+  margin-top: 44px;
+  /* margin-bottom: 32px; */
+  border-bottom: 1px solid #E5E7EB;
+}
+
+.section__education:last-of-type{
+  border-bottom: none;
+  margin-top: 24px;
+}
+.section__education:nth-child(3){
+  margin-top: 24px;
+}
+.ed__row{
+  display: flex;
+}
+.education__year{
+  margin-right: 16px;
+}
+.educaion__row{
+  margin-bottom: 32px;
+}
+
+
