--- a/portfolio-landing/src/component/home/Home.css
+++ b/portfolio-landing/src/component/home/Home.css
@@ -6,10 +6,17 @@
 .section {
   overflow: hidden;
   margin-top: 5rem;
+  /* height: 100vh; */
+}
+.swm{
+  margin-top: 40px;
 }
 @media (min-width: 793px) {
   .section {
     display: flex;
+  } 
+  .swm{
+    margin-top: 80px;
   }
 }
 .section__content {
@@ -17,8 +24,9 @@
   /* display: flex; */
 }
 
+
 .section__container {
-  max-width: 1365px;
+  max-width: 1365px; 
   padding: 0px 5.3125rem;
   margin: 0px auto;
 
@@ -27,6 +35,7 @@
 }
 
 .section__body {
+  z-index: 1;
   /* padding: 162px 0px 0px 0px; */
 }
 @media (min-width: 793px) {
@@ -40,28 +49,74 @@
   .about__container {
     padding: 0px 0px;
   }
+  .ed-in__row{
+    display: flex;
+  }
 }
 
-.section__title {
+
+/* .section__title {
   font-weight: 700;
   font-size: 60px;
   line-height: 90px;
+} */
+
+.text{
+  font-size: calc(14px + 6 * ((100vw) / 1280));
+  line-height: 30px;
 }
 
+h1{
+  font-weight: 700;
+  /* font-size: 60px; */
+  font-size: calc(24px + 16 * ((100vw) / 1280));
+  line-height: 90px;
+}
+h2{
+  font-weight: 700;
+  font-size: calc(20px + 12 * ((100vw) / 1280));
+  line-height: 48px;
+}
 h3{
   font-weight: 700;
-  font-size: 24px;
+  font-size: calc(20px + 4 * ((100vw) / 1280));
   line-height: 36px;
 }
+
+/* адаптивный шрифт  = (минимальное значение шрифта + 
+добавочное число(плавно увеличивающее шрифт)(размер шрифта по макету-
+минимальный размер шрифта)*(100vw-ширина экрана / ширина макета))*/
+
+
+/* для телефона небольшое несовпадение */
+@media (max-width:793px){
+  h1{
+    font-size: calc(24px + (16 + 16 * 0.7) * ((100vw - 320px) / 1280));
+    line-height: 36px;
+    margin-bottom: 4px;
+  }
+  h2{
+    font-size: calc(20px + (12 + 12 * 0.7) * ((100vw - 320px) / 1280));
+    line-height: 30px;
+  }
+  h3{
+    font-size: calc(20px + (4 + 4 * 0.7) * ((100vw - 320px) / 1280));
+    line-height: 30px;
+  }
+  .text{
+    font-size: calc(14px + (6 + 6 * 0.7) * ((100vw - 320px) / 1280));
+    line-height: 21px;
+  }
+  /* отнимаем минимальный размер экрана и прибавляем-компенсируем 70% */
+}
+
+
 .section__description {
-  font-size: 20px;
-  line-height: 30px;
   color: #696969;
+  padding-bottom: 38px;
 }
 .section__text {
   position: relative;
-  font-size: 20px;
-  line-height: 30px;
   color: #696969;
   margin-top: 5.75rem;
   margin-bottom: 3.75rem;
@@ -76,13 +131,52 @@ h3{
   height: 3px;
   background-color: #7e3af2;
   display: inline-block;
-  margin: -24px 0px 0px 0px;
+  margin: -1.625rem 0px 0px 0px;
+}
+@media (max-width:793px){
+  .section__text {
+    margin-top: 38px;
+    margin-bottom: 27px;
+  }
+  .section__container {
+    
+    padding: 0px 15px;
+    margin: 0px auto;
+  }
+}
+
+.section__about__title{
+  font-weight: 600;
+}
+
+.section__about__text{
+  color: #27272A;
 }
 
 .section__image {
   max-width: 100%;
+  position: relative;
+}
+.section__image img{
+  position: relative;
+  z-index: 20;
+}
+.tr-bg-img{
+  padding: 90px 0px 0px 120px;
+  z-index: 10;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+.tr-bg-img img{
+  height: 100%;
+  width: 100%;
+  object-fit: fill;
 }
 @media (min-width: 793px) {
+  
   .section__image {
     flex: 0 0 50%;
     transform: translate(-100%, 0px);
@@ -95,20 +189,18 @@ h3{
     padding: 0px 0px 20% 0px;
     position: relative;
   }
-  
-/* .round{
+/*   
+.round{
   display: inline-block;
   border-radius: 100%;
   overflow: hidden;
   width: 364px;
   height: 364px;
-}
+}*/
 .round img{
   width:100%;
   height:100%;
-  object-fit: cover;
-  background-color: #696969;
-} */
+} 
   .section__image img {
     position: absolute;
     width: 100%;
@@ -146,15 +238,7 @@ h3{
   stroke: #7e3af2;
 }
 
-.section__about__title{
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 30px;
-}
 
-.section__about__text{
-  color: #27272A;
-}
 
 .section__education{
   display: inline-block;
@@ -181,3 +265,17 @@ h3{
 }
 
 
+
+/*  */
+.footer{
+  /* height: 5.0625rem; */
+  color: #696969;
+  display: flex;
+  align-items:center ;
+  margin: 28px;
+}
+@media (max-width: 793px) {
+  .footer{
+    margin: 21px;
+  }
+}
