--- a/portfolio-landing/src/css/common.css
+++ b/portfolio-landing/src/css/common.css
@@ -1,9 +1,10 @@
+@import "../css/_fonts.css";
+@import "../css/_reset.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import "../css/_fonts.css";
-@import "../css/_reset.css";
 /* @import "../css/_ui.css"; */
 
 body {
@@ -17,4 +18,10 @@ body {
   max-width: 1365px;
   padding: 0px 5.3125rem;
   margin: 0px auto;
+}
+
+@media (max-width: 793px) {
+  .container {
+    padding: 0px 15px;
+  }
 }
