--- a/portfolio-landing/src/css/_fonts.css
+++ b/portfolio-landing/src/css/_fonts.css
@@ -1,2 +1,50 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap'); */
 
+h1 {
+  font-weight: 700;
+  /* font-size: 60px; */
+  font-size: calc(24px + 16 * ((100vw) / 1280));
+  line-height: 90px;
+}
+
+.text {
+  font-size: calc(14px + 6 * ((100vw) / 1280));
+  line-height: 30px;
+}
+
+h2 {
+  font-weight: 700;
+  font-size: calc(20px + 12 * ((100vw) / 1280));
+  line-height: 48px;
+}
+h3 {
+  font-weight: 700;
+  font-size: calc(20px + 4 * ((100vw) / 1280));
+  line-height: 36px;
+}
+
+/* адаптивный шрифт  = (минимальное значение шрифта + 
+  добавочное число(плавно увеличивающее шрифт)(размер шрифта по макету-
+  минимальный размер шрифта)*(100vw-ширина экрана / ширина макета))*/
+
+/* для телефона небольшое несовпадение */
+@media (max-width: 793px) {
+  h1 {
+    font-size: calc(24px + (16 + 16 * 0.7) * ((100vw - 320px) / 1280));
+    line-height: 36px;
+    margin-bottom: 4px;
+  }
+  h2 {
+    font-size: calc(20px + (12 + 12 * 0.7) * ((100vw - 320px) / 1280));
+    line-height: 30px;
+  }
+  h3 {
+    font-size: calc(20px + (4 + 4 * 0.7) * ((100vw - 320px) / 1280));
+    line-height: 30px;
+  }
+  .text {
+    font-size: calc(14px + (6 + 6 * 0.7) * ((100vw - 320px) / 1280));
+    line-height: 21px;
+  }
+  /* отнимаем минимальный размер экрана и прибавляем-компенсируем 70% */
+}
