--- a/portfolio-landing/src/component/home/Home.css
+++ b/portfolio-landing/src/component/home/Home.css
@@ -1,3 +1,5 @@
+::-webkit-scrollbar { width: 0;}
+
 .container {
   max-width: 1365px;
   padding: 0px 5.3125rem;
@@ -6,27 +8,25 @@
 .section {
   overflow: hidden;
   margin-top: 5rem;
-  /* height: 100vh; */
 }
-.swm{
+.swm {
   margin-top: 40px;
 }
 @media (min-width: 793px) {
   .section {
     display: flex;
-  } 
-  .swm{
-    margin-top: 80px;
+  }
+  .swm {
+    /* margin-top: 80px; */
+    padding: 0px 5.3125rem;
   }
 }
 .section__content {
   flex: 0 0 100%;
-  /* display: flex; */
 }
 
-
 .section__container {
-  max-width: 1365px; 
+  max-width: 1365px;
   padding: 0px 5.3125rem;
   margin: 0px auto;
 
@@ -36,24 +36,23 @@
 
 .section__body {
   z-index: 1;
-  /* padding: 162px 0px 0px 0px; */
 }
 @media (min-width: 793px) {
   .section__body {
     width: 50%;
     padding: 50px 30px 50px 0px;
   }
-  .about__body {
-    padding: 0px 200px 0px 0px;
+
+  .pl{
+    padding-left: 30px;
   }
   .about__container {
     padding: 0px 0px;
   }
-  .ed-in__row{
+  .ed-in__row {
     display: flex;
   }
 }
-
 
 .section__description {
   color: #696969;
@@ -77,7 +76,7 @@
   display: inline-block;
   margin: -1.625rem 0px 0px 0px;
 }
-@media (max-width:793px){
+@media (max-width: 793px) {
   .section__text {
     margin-top: 38px;
     margin-bottom: 27px;
@@ -88,23 +87,23 @@
   }
 }
 
-.section__about__title{
+.section__about__title {
   font-weight: 600;
 }
 
-.section__about__text{
-  color: #27272A;
+.section__about__text {
+  color: #27272a;
 }
 
 .section__image {
   max-width: 100%;
   position: relative;
 }
-.section__image img{
+.section__image img {
   position: relative;
   z-index: 20;
 }
-.tr-bg-img{
+.tr-bg-img {
   padding: 90px 0px 0px 120px;
   z-index: 10;
   position: absolute;
@@ -113,13 +112,12 @@
   width: 100%;
   height: 100%;
 }
-.tr-bg-img img{
+.tr-bg-img img {
   height: 100%;
   width: 100%;
   object-fit: fill;
 }
 @media (min-width: 793px) {
-  
   .section__image {
     flex: 0 0 50%;
     transform: translate(-100%, 0px);
@@ -133,10 +131,10 @@
     position: relative;
   }
 
-.round img{
-  width:100%;
-  height:100%;
-} 
+  .round img {
+    width: 100%;
+    height: 100%;
+  }
   .section__image img {
     position: absolute;
     width: 100%;
@@ -147,18 +145,18 @@
 }
 
 /* --------------- */
-.section__interests{
+.section__interests {
   display: flex;
   margin-top: 44px;
 }
 
-.circle{
+.circle {
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
   display: -o-flex;
   display: flex;
-  border: 2px solid #7E3AF2;
+  border: 2px solid #7e3af2;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -168,36 +166,30 @@
   margin-right: 16px;
 }
 
-
 .circle svg path {
   fill: #7e3af2;
   stroke: #7e3af2;
 }
 
-
-
-.section__education{
+.section__education {
   display: inline-block;
   margin-top: 44px;
-  border-bottom: 1px solid #E5E7EB;
+  border-bottom: 1px solid #e5e7eb;
 }
 
-.section__education:last-of-type{
+.section__education:last-of-type {
   border-bottom: none;
   margin-top: 24px;
 }
-.section__education:nth-child(3){
+.section__education:nth-child(3) {
   margin-top: 24px;
 }
-.ed__row{
+.ed__row {
   display: flex;
 }
-.education__year{
+.education__year {
   margin-right: 16px;
 }
-.educaion__row{
+.educaion__row {
   margin-bottom: 32px;
 }
-
-
-
